fix: address multiple security vulnerabilities in invoice package
- Command injection: replace Runtime.exec with ProcessBuilder + filename validation
- Path traversal: canonicalize export path and verify it stays inside EXPORT_DIR
- Hardcoded credentials/secrets: move DB creds, admin token, and signing key to env vars
- String comparison with ==: use .equals() in computeTotal; use MessageDigest.isEqual for tokens
- Reflected XSS: HTML-escape all user-controlled output in InvoiceServlet
- Weak MD5 signature: replace with SHA-256
- Insecure Random for export IDs: replace java.util.Random with SecureRandom
- SSRF / cleartext HTTP: upgrade to HTTPS, validate currency against allowlist
- Empty catch block: rethrow as RuntimeException with message in findByCustomer
- Public mutable fields: make Invoice fields private
- Public mutable static service field: make InvoiceServlet.service private static final

Co-authored-by: emmanuel-difede-sonarsource <282309464+emmanuel-difede-sonarsource@users.noreply.github.com>