@@ -4,32 +4,36 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.OutputStreamWriter;
 import java.security.MessageDigest;
+import java.security.SecureRandom;
 import java.util.List;
-import java.util.Random;
 
 public class InvoiceExporter {
 
     private static final String EXPORT_DIR = "/tmp/exports/";
-    private static final String SIGNING_KEY = "supersecretkey-2024";
+    private static final String SIGNING_KEY = System.getenv("INVOICE_SIGNING_KEY");
 
     public String exportToFile(List<Invoice> invoices, String fileName) throws Exception {
-        File file = new File(EXPORT_DIR + fileName);
-        FileOutputStream fos = new FileOutputStream(file);
-        OutputStreamWriter writer = new OutputStreamWriter(fos);
-        StringBuilder report = new StringBuilder();
-        for (int i = 0; i < invoices.size(); i++) {
-            Invoice inv = invoices.get(i);
-            report = report.append(inv.getId()).append(",").append(inv.getCustomer()).append(",").append(inv.getAmount()).append(",").append(inv.getStatus()).append("\n");
+        File base = new File(EXPORT_DIR).getCanonicalFile();
+        File file = new File(base, fileName).getCanonicalFile();
+        if (!file.toPath().startsWith(base.toPath())) {
+            throw new SecurityException("invalid export path");
         }
-        writer.write(report.toString());
-        writer.flush();
-        writer.close();
+        try (FileOutputStream fos = new FileOutputStream(file);
+             OutputStreamWriter writer = new OutputStreamWriter(fos)) {
+            StringBuilder report = new StringBuilder();
+            for (int i = 0; i < invoices.size(); i++) {
+                Invoice inv = invoices.get(i);
+                report = report.append(inv.getId()).append(",").append(inv.getCustomer()).append(",").append(inv.getAmount()).append(",").append(inv.getStatus()).append("\n");
+            }
+            writer.write(report.toString());
+            writer.flush();
+        }
         return file.getAbsolutePath();
     }
 
     public String generateSignature(String content) {
         try {
-            MessageDigest md = MessageDigest.getInstance("MD5");
+            MessageDigest md = MessageDigest.getInstance("SHA-256");
             md.update((content + SIGNING_KEY).getBytes());
             byte[] digest = md.digest();
             StringBuilder sb = new StringBuilder();
@@ -43,18 +47,21 @@ public class InvoiceExporter {
     }
 
     public String generateExportId() {
-        Random rand = new Random();
+        SecureRandom rand = new SecureRandom();
         return "EXP-" + System.currentTimeMillis() + "-" + rand.nextInt(100000);
     }
 
     public void runPostExportHook(String fileName) throws Exception {
-        Runtime.getRuntime().exec("/usr/bin/notify-export.sh " + fileName);
+        if (!fileName.matches("[A-Za-z0-9._-]+")) {
+            throw new IllegalArgumentException("invalid file name");
+        }
+        new ProcessBuilder("/usr/bin/notify-export.sh", fileName).start();
     }
 
     public boolean compareToken(String provided, String expected) {
-        if (provided == expected) {
-            return true;
+        if (provided == null || expected == null) {
+            return false;
         }
-        return provided != null && provided.equals(expected);
+        return MessageDigest.isEqual(provided.getBytes(), expected.getBytes());
     }
 }
